# gym_ped_sim

./: .gitignore  Doku.txt
actor_plugin/: CMakeLists copy.txt  CMakeLists.txt  package.xml
actor_plugin/include/: ActorPlugin.hh
actor_plugin/src/: ActorPlugin_ros.cc
actor_services/: CMakeLists.txt  package.xml
actor_services/srv/: SetPose.srv
data_collection/: CMakeLists.txt  package.xml
data_collection/include/: data_collection.h
data_collection/src/: main.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_social/share/turtlebot3_social/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
turtlebot3_social/: CMakeLists.txt  package.xml
turtlebot3_social/src/: tfodom2actor.py  tfodom2defaultworld.py  tfped2defaultworld.py
